# ComplexTensor

./: .gitignore  3d_visuals_test.py  CONTRIBUTING.md  MANIFEST.in  README.md  extract_data.py  project_tree.py  pyproject.toml  requirements.txt
.github/workflows/: publish.yml
complex_embeddings_outputs/: complex_embeddings_imaginary.npy  complex_embeddings_real.npy  complex_imaginary_part.npy  complex_real_part.npy  memory_metrics.npy  real_embeddings.npy  reconstructed_real_embeddings.npy
data_dumps/: Entropy_and_Complexity_Data_Analysis (1).csv  complexity_samples.npy  entropy_samples.npy  entropy_samples_dump.npy  mean-peak.md  mean_values.npy  std_dev_samples_dump.npy
data_dumps/entanglement/test_data_new/: hadamard_state.npy  superposition_state.npy
data_dumps/entanglement/test_data_old/: basis_zero_state.npy  bell_state.npy
data_dumps/lyapunov/: lyapunov_exponent.npy  original_data.npy  transformed_data.npy
deprecated/: basic_ComplexTensor.py  test_basic_ComplexTensor.py
examples/: bluecow009_solving_TSP_1_qubit (1).ipynb  example_nn.py  quantum_superposition_entanglement_measurement.py
quantum_em_solver/: quantum_data_analysis.xlsx
snippets/: tensor_approximation.py
src/complextensor/: __init__.py  apply_gate.py  complex_embeddings.py  complex_tensor.py  quantum_state_processor.py  tensor_field.py  tensor_product.py
src/tools/: index_server.py  qnrg_characters.py  qt_state_processor.py
test_outputs/: T_evolved_real.npy  T_optimized_imag.npy  T_optimized_real.npy  tensor_metrics.txt
tests/: embeddings.py  plot_product.py  test_apply_gate.py  test_complex_embeddings.py  test_complex_embeddings_verbose.py  test_complex_tensor.py  test_embeddings_pipeline.py  test_tensor_field.py  test_tensor_field_data.py  test_tensor_product.py
